--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -2,6 +2,8 @@
 @import "bootstrap";
 
 /* universal */
+$gray-light: #777;
+
 
 body {
   padding-top: 60px;
@@ -17,10 +19,9 @@ textarea {
 
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
+  h1 { 
+    margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -42,7 +43,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $gray-light;
 }
 
 p {
@@ -59,12 +60,13 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  
+  :hover {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
 
 /* footer */
 
@@ -72,27 +74,23 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
-  color: #777;
-}
-
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
+  color: $gray-light;
+  a {
+    color: #555;
+    :hover {
+      color: #222;
+    }
+  }
+  small {
+    float: left;  
+  }
+  ul {
+    float: right;
+    list-style: none;
+    
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
