--- a/sample_app_2/app/assets/stylesheets/custom.scss
+++ b/sample_app_2/app/assets/stylesheets/custom.scss
@@ -49,3 +49,19 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+
+#logo {
+  float: left;
+  margin-left: 10px;
+  font-size: 1.7em;
+  color: #777;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
