fix(asset): color要素をgemの用意された変数に変更

--- a/sample_app_2/app/assets/stylesheets/custom.scss
+++ b/sample_app_2/app/assets/stylesheets/custom.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
 body {
   padding-top: 60px;
 }
@@ -42,7 +43,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $gray-light;
 }
 
 p {
@@ -54,7 +55,7 @@ p {
   float: left;
   margin-left: 10px;
   font-size: 1.7em;
-  color: #777;
+  color: $gray-light;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
@@ -70,8 +71,7 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
-  color: #777;
-
+  color: $gray-light;
   a {
     color: #555;
     &:hover {
