--- a/sample_app_2/app/assets/stylesheets/custom.scss
+++ b/sample_app_2/app/assets/stylesheets/custom.scss
@@ -60,11 +60,11 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-}
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 footer {
